Responsive fix on small devices

--- a/test/style.css
+++ b/test/style.css
@@ -5,6 +5,7 @@ body {
     font-family: monospace;
     background: #5da7fa;
     padding-top: 10vh;
+    padding-bottom: 10vh;
 }
 
 .well {
@@ -36,4 +37,11 @@ button {
     text-transform: uppercase;
     outline: none !important;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 425px) {
+    .well {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
 }
